test-fixtures/machine-dsl-tests/tests/compile_fail/helper_string_dispatch_absent.stderr
error[E0425]: cannot find function `evaluate_helper` in module `meerkat`
 --> tests/compile_fail/helper_string_dispatch_absent.rs:5:22
  |
5 |     let _ = meerkat::evaluate_helper(
  |                      ^^^^^^^^^^^^^^^ not found in `meerkat`
